# shuttercat

./: README  shuttercat.cabal  shuttercat.hs  shuttercopy.bash  stuttercat.hs  tick.hs
Control/Concurrent/STM/: ShutterChan.hs
Database/PostgreSQL/: Pulse.hs
