name                          : shuttercat
version                       : 0.0.0
category                      : System
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : oss@solidsnack.be
homepage                      : http://github.com/solidsnack/shuttercat
synopsis                      : Pipes with a stutter.
description                   : Pipes with a stutter.

cabal-version                 : >= 1.10
build-type                    : Simple
extra-source-files            : README
                              , LICENSE

source-repository               head
  type                        : git
  location                    : http://github.com/solidsnack/shuttercat.git


flag no-cli
  description                 : Disable command line tool.
  default                     : False


library
  default-language            : Haskell98
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , stm >= 2.4
                              , time >= 1.4
                              , async >= 2
                              , cmdtheline >= 0.2
  exposed-modules             : Control.Concurrent.STM.ShutterChan


executable                      shuttercat
  default-language            : Haskell98
  main-is                     : shuttercat.hs
  if flag(no-cli)
    buildable                 : False
  else
    buildable                 : True
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , stm >= 2.4
                              , time >= 1.4
                              , async >= 2
                              , cmdtheline >= 0.2

